# mcc-import

./: README.md  config.yaml  import.py  pyproject.toml
data/observations/: description.md
data/stations/: description.md
mcc_import/: __init__.py  observations.py  stations.py  utils.py
